crates/cli/src/check/expr/snapshots/code_moniker_cli__check__expr__snapshots__quantifier_any.snap
---
source: crates/cli/src/check/expr/snapshots.rs
expression: snapshot_expr(&expr)
---
{
  "root": {
    "domain": {
      "kind": "method",
      "type": "children"
    },
    "filter": {
      "lhs": {
        "name": "name",
        "type": "attr"
      },
      "op": "eq",
      "raw": "name = 'execute'",
      "rhs": {
        "type": "string",
        "value": "execute"
      },
      "type": "atom"
    },
    "kind": "any",
    "type": "quantifier"
  }
}
