crates/cli/src/check/expr/snapshots/code_moniker_cli__check__expr__snapshots__quantifier_none_out_refs.snap
---
source: crates/cli/src/check/expr/snapshots.rs
expression: snapshot_expr(&expr)
---
{
  "root": {
    "domain": {
      "type": "out_refs"
    },
    "filter": {
      "lhs": {
        "name": "kind",
        "type": "attr"
      },
      "op": "eq",
      "raw": "kind = 'imports'",
      "rhs": {
        "type": "string",
        "value": "imports"
      },
      "type": "atom"
    },
    "kind": "none",
    "type": "quantifier"
  }
}
