crates/cli/src/check/expr/snapshots/code_moniker_cli__check__expr__snapshots__regex_op_on_count.snap
---
source: crates/cli/src/check/expr/snapshots.rs
expression: "json!({ \"input\": input.trim(), \"error\": err.to_string(), })"
---
{
  "error": "expression `count(method) =~ 2`: number expressions only accept numeric operators, got RegexMatch",
  "input": "count(method) =~ 2"
}
