crates/cli/src/check/expr/snapshots/code_moniker_cli__check__expr__snapshots__regex_rhs_neq_text.snap
---
source: crates/cli/src/check/expr/snapshots.rs
expression: snapshot_expr(&expr)
---
{
  "root": {
    "lhs": {
      "name": "text",
      "type": "attr"
    },
    "op": "regex_match",
    "raw": "text =~ foo!=bar",
    "rhs": {
      "pattern": "foo!=bar",
      "type": "regex"
    },
    "type": "atom"
  }
}
